--- a/config/locales/arb/currencies.yml
+++ b/config/locales/arb/currencies.yml
@@ -1,179 +1,179 @@
 arb:
   currencies:
-    AED: 'درهم إماراتي'
-    AFN: 'أفغاني'
-    ALL: 'ليك ألباني'
-    AMD: 'درام'
-    ANG: 'غويلدر الأنتيل الهولندية'
-    AOA: 'كوانزا أنغولي'
-    ARS: 'بيزو أرجنتيني'
-    AUD: 'دولار أسترالي'
-    AWG: 'فلورن أروبي'
-    AZN: 'مانات'
-    BAM: 'مارك بوسني'
-    BBD: 'دولار بربادوسي'
-    BDT: 'تاكا بنغلاديشي'
-    BGN: 'ليف'
-    BHD: 'دينار بحريني'
-    BIF: 'فرنك بروندي'
-    BMD: 'دولار برمودي'
-    BND: 'دولار بروني'
-    BOB: 'بوليفاريو بوليفي'
-    BOV: 'بوليفاريو بوليفي'
-    BRL: 'ريال برازيلي'
-    BSD: 'دولار بهامي'
-    BTN: 'نغولترم'
-    BWP: 'بولا'
-    BYR: 'روبل بلاروسي'
-    BZD: 'دولار بليزي'
-    CAD: 'دولار كندي'
-    CDF: 'فرنك كونغولي'
-    CHE: 'يورو فير'
-    CHF: 'فرنك سويسري'
-    CHW: 'فرنك فير'
-    # CLF: 'Unidades de fomento'
-    CLP: 'بيسو'
-    CNY: 'يوان'
-    COP: 'بيسو'
-    COU: 'ريال'
-    CRC: 'كولون كوستاريكي'
-    # CUC: 'Peso Convertible'
-    CUP: 'بيزو كوبي'
-    CVE: 'ايسكودو'
-    CYP: 'جنيه قبرصي' #?
-    CZK: 'كرونة تشيكية'
-    DJF: 'فرنك جيبوتي'
-    DKK: 'كرونة دنماركية'
-    DOP: 'بيسو دومنيكاني'
-    DZD: 'دينار جزائري'
-    EEK: 'كرون إستوني' #?
-    EGP: 'جنيه مصري'
-    ERN: 'ناكفا'
-    ETB: 'بير'
-    EUR: 'يورو'
-    FJD: 'دولار فيجي'
-    FKP: 'جنيه جزر فوكلاند'
-    FRF: 'فرنك فرنسي'
-    GBP: 'جنيه استرليني'
-    GEL: 'لاري'
-    GHC: 'سيدي غاني' #?
-    # GHS: 'Ghana Cedi'
-    GIP: 'جنيه جبرلتار'
-    GMD: 'دالاسي'
-    GNF: 'فرنك غيني'
-    GTQ: 'كيتزال'
-    GYD: 'دولار غوياني'
-    HKD: 'دولار هونغ كونغ'
-    HNL: 'لمبيرا'
-    HRK: 'كونا'
-    HTG: 'جوردة هايتية'
-    HUF: 'فورنت'
-    IDR: 'روبية أندونيسية'
-    ILS: 'شيكل'
-    INR: 'روبي هندية'
-    IQD: 'دينار'
-    IRR: 'ريال إيراني'
-    ISK: 'كرون'
-    JMD: 'دولار جامايكي'
-    JOD: 'دينار'
-    JPY: 'ين_ياباني'
-    KES: 'شلن'
-    KGS: 'سوم'
-    KHR: 'ريال كمبودي'
-    KMF: 'فرنك قمري'
-    KPW: 'ون كوريا الشمالية'
-    KRW: 'ون كوريا الجنوبية'
-    KWD: 'دينار'
-    KYD: 'دولار'
-    # KZT: 'Tenge'
-    LAK: 'كب'
-    LBP: 'ليرة'
-    LKR: 'روبية سريلانكي'
-    LRD: 'دولار'
-    LSL: 'لوتي'
-    LTL: 'ليتاس لتواني'
-    LVL: 'لاتس لاتفي'
-    LYD: 'دينار ليبي'
-    MAD: 'درهم مغربي'
-    MDL: 'ليو'
-    # MGA: 'Malagasy Ariary'
-    MKD: 'دينار'
-    MMK: 'كيات'
-    # MNT: 'Tugrik'
-    MOP: 'باتاكا ماكاوية'
-    MRO: 'أوقية'
-    MTL: 'لير' #?
-    MUR: 'روبي موريشي'
-    MVR: 'روفيه'
-    MWK: 'كواشا'
-    MXN: 'بيزو مكسيكي'
-    # MXV: 'Mexican Unidad de Inversion (UDI)'
-    MYR: 'رينغيت'
-    MZN: 'متكال'
-    NAD: 'دولار ناميبي'
-    NGN: 'نيرة'
-    NIO: 'كوردوبا نيكاراغوي'
-    NOK: 'كرونه نروجية'
-    NPR: 'روبي نيبالي'
-    NZD: 'دولار نيوزيلندي'
-    OMR: 'ريال عماني'
-    PAB: 'بالبوا'
-    PEN: 'سول الجديد'
-    PGK: 'كينا بابوا غينيا الجديدة'
-    PHP: 'بيسو الفلبيني'
-    PKR: 'روبية باكستانية'
-    PLN: 'زلوتي بولندي'
-    PYG: 'غواراني'
-    QAR: 'ريال قطري'
-    ROL: 'ليو روماني' #?
-    RON: 'ليو روماني'
-    RSD: 'دينار صربي'
-    RUB: 'روبل روسي'
-    RWF: 'فرنك رواندي'
-    SAR: 'ريال سعودي'
-    SBD: 'دولار جزر سليمان'
-    SCR: 'روبية سيشيلية'
-    SDG: 'جنيه سوداني'
-    SEK: 'كرونه سويدية'
-    SGD: 'دولار سنغافوري'
-    SHP: 'جنيه سانت هيلينا'
-    SKK: 'كرونة سلوفاكية' #?
-    # SLL: 'Leone'
-    SOS: 'شلن صومالي'
-    SRD: 'دولار سورينامي'
-    # SSP: 'South Sudanese Pound'
-    STD: 'دوبرا'
-    # SVC: 'El Salvador Colon'
-    SYP: 'ليرة سورية'
-    SZL: 'ليلانغيني'
-    THB: 'بات'
-    TJS: 'ساماني'
-    TMM: 'منات تركمانستاني' #?
-    # TMT: 'Turkmenistan New Manat'
-    TND: 'دينار تونسي'
-    TOP: 'بانجا'
-    TRY: 'ليرة تركية'
-    TTD: 'دولار ترينيداد وتوباغو'
-    TWD: 'دولار تايواني جديد'
-    TZS: 'شيلينغ تنزاني'
-    UAH: 'هريفنا أوكرانية'
-    UGX: 'شيلينغ أوغندي'
-    USD: 'دولار_أمريكي'
-    # USN: 'US Dollar (Next day)'
-    # USS: 'US Dollar (Same day)'
-    # UYI: 'Uruguay Peso en Unidades Indexadas (URUIURUI)'
-    # UYU: 'Peso Uruguayo'
-    UZS: 'سوم'
-    VEB: 'بوليفار فنزويلي' #?
-    # VEF: 'Bolivar Fuerte'
-    VND: 'دونغ'
-    VUV: 'فاتو'
-    # WST: 'Tala'
-    YER: 'ريال يمني'
-    ZAR: 'راند جنوب أفريقي'
-    ZMK: 'كواشا'
-    ZWD: 'دولار زمبابوي' #?
-    # ZWL: 'Zimbabwe Dollar'
+    AED: "درهم إماراتي"
+    AFN: "أفغاني"
+    ALL: "ليك ألباني"
+    AMD: "درام"
+    ANG: "غويلدر الأنتيل الهولندية"
+    AOA: "كوانزا أنغولي"
+    ARS: "بيزو أرجنتيني"
+    AUD: "دولار أسترالي"
+    AWG: "فلورن أروبي"
+    AZN: "مانات"
+    BAM: "مارك بوسني"
+    BBD: "دولار بربادوسي"
+    BDT: "تاكا بنغلاديشي"
+    BGN: "ليف"
+    BHD: "دينار بحريني"
+    BIF: "فرنك بروندي"
+    BMD: "دولار برمودي"
+    BND: "دولار بروني"
+    BOB: "بوليفاريو بوليفي"
+    BOV: "بوليفاريو بوليفي"
+    BRL: "ريال برازيلي"
+    BSD: "دولار بهامي"
+    BTN: "نغولترم"
+    BWP: "بولا"
+    BYR: "روبل بلاروسي"
+    BZD: "دولار بليزي"
+    CAD: "دولار كندي"
+    CDF: "فرنك كونغولي"
+    CHE: "يورو فير"
+    CHF: "فرنك سويسري"
+    CHW: "فرنك فير"
+    # CLF: "Unidades de fomento"
+    CLP: "بيسو"
+    CNY: "يوان"
+    COP: "بيسو"
+    COU: "ريال"
+    CRC: "كولون كوستاريكي"
+    # CUC: "Peso Convertible"
+    CUP: "بيزو كوبي"
+    CVE: "ايسكودو"
+    CYP: "جنيه قبرصي" #?
+    CZK: "كرونة تشيكية"
+    DJF: "فرنك جيبوتي"
+    DKK: "كرونة دنماركية"
+    DOP: "بيسو دومنيكاني"
+    DZD: "دينار جزائري"
+    EEK: "كرون إستوني" #?
+    EGP: "جنيه مصري"
+    ERN: "ناكفا"
+    ETB: "بير"
+    EUR: "يورو"
+    FJD: "دولار فيجي"
+    FKP: "جنيه جزر فوكلاند"
+    FRF: "فرنك فرنسي"
+    GBP: "جنيه استرليني"
+    GEL: "لاري"
+    GHC: "سيدي غاني" #?
+    # GHS: "Ghana Cedi"
+    GIP: "جنيه جبرلتار"
+    GMD: "دالاسي"
+    GNF: "فرنك غيني"
+    GTQ: "كيتزال"
+    GYD: "دولار غوياني"
+    HKD: "دولار هونغ كونغ"
+    HNL: "لمبيرا"
+    HRK: "كونا"
+    HTG: "جوردة هايتية"
+    HUF: "فورنت"
+    IDR: "روبية أندونيسية"
+    ILS: "شيكل"
+    INR: "روبي هندية"
+    IQD: "دينار"
+    IRR: "ريال إيراني"
+    ISK: "كرون"
+    JMD: "دولار جامايكي"
+    JOD: "دينار"
+    JPY: "ين_ياباني"
+    KES: "شلن"
+    KGS: "سوم"
+    KHR: "ريال كمبودي"
+    KMF: "فرنك قمري"
+    KPW: "ون كوريا الشمالية"
+    KRW: "ون كوريا الجنوبية"
+    KWD: "دينار"
+    KYD: "دولار"
+    # KZT: "Tenge"
+    LAK: "كب"
+    LBP: "ليرة"
+    LKR: "روبية سريلانكي"
+    LRD: "دولار"
+    LSL: "لوتي"
+    LTL: "ليتاس لتواني"
+    LVL: "لاتس لاتفي"
+    LYD: "دينار ليبي"
+    MAD: "درهم مغربي"
+    MDL: "ليو"
+    # MGA: "Malagasy Ariary"
+    MKD: "دينار"
+    MMK: "كيات"
+    # MNT: "Tugrik"
+    MOP: "باتاكا ماكاوية"
+    MRO: "أوقية"
+    MTL: "لير" #?
+    MUR: "روبي موريشي"
+    MVR: "روفيه"
+    MWK: "كواشا"
+    MXN: "بيزو مكسيكي"
+    # MXV: "Mexican Unidad de Inversion (UDI)"
+    MYR: "رينغيت"
+    MZN: "متكال"
+    NAD: "دولار ناميبي"
+    NGN: "نيرة"
+    NIO: "كوردوبا نيكاراغوي"
+    NOK: "كرونه نروجية"
+    NPR: "روبي نيبالي"
+    NZD: "دولار نيوزيلندي"
+    OMR: "ريال عماني"
+    PAB: "بالبوا"
+    PEN: "سول الجديد"
+    PGK: "كينا بابوا غينيا الجديدة"
+    PHP: "بيسو الفلبيني"
+    PKR: "روبية باكستانية"
+    PLN: "زلوتي بولندي"
+    PYG: "غواراني"
+    QAR: "ريال قطري"
+    ROL: "ليو روماني" #?
+    RON: "ليو روماني"
+    RSD: "دينار صربي"
+    RUB: "روبل روسي"
+    RWF: "فرنك رواندي"
+    SAR: "ريال سعودي"
+    SBD: "دولار جزر سليمان"
+    SCR: "روبية سيشيلية"
+    SDG: "جنيه سوداني"
+    SEK: "كرونه سويدية"
+    SGD: "دولار سنغافوري"
+    SHP: "جنيه سانت هيلينا"
+    SKK: "كرونة سلوفاكية" #?
+    # SLL: "Leone"
+    SOS: "شلن صومالي"
+    SRD: "دولار سورينامي"
+    # SSP: "South Sudanese Pound"
+    STD: "دوبرا"
+    # SVC: "El Salvador Colon"
+    SYP: "ليرة سورية"
+    SZL: "ليلانغيني"
+    THB: "بات"
+    TJS: "ساماني"
+    TMM: "منات تركمانستاني" #?
+    # TMT: "Turkmenistan New Manat"
+    TND: "دينار تونسي"
+    TOP: "بانجا"
+    TRY: "ليرة تركية"
+    TTD: "دولار ترينيداد وتوباغو"
+    TWD: "دولار تايواني جديد"
+    TZS: "شيلينغ تنزاني"
+    UAH: "هريفنا أوكرانية"
+    UGX: "شيلينغ أوغندي"
+    USD: "دولار_أمريكي"
+    # USN: "US Dollar (Next day)"
+    # USS: "US Dollar (Same day)"
+    # UYI: "Uruguay Peso en Unidades Indexadas (URUIURUI)"
+    # UYU: "Peso Uruguayo"
+    UZS: "سوم"
+    VEB: "بوليفار فنزويلي" #?
+    # VEF: "Bolivar Fuerte"
+    VND: "دونغ"
+    VUV: "فاتو"
+    # WST: "Tala"
+    YER: "ريال يمني"
+    ZAR: "راند جنوب أفريقي"
+    ZMK: "كواشا"
+    ZWD: "دولار زمبابوي" #?
+    # ZWL: "Zimbabwe Dollar"
   number:
     currency:
       formats: #?
