--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -1,80 +1,80 @@
 arb:
   rights:
-    administrate_accountancy: 'مدخل لوحدة المحاسبة' #?
-    backup_company: 'تطبيق / تحديث النسخ الاحتياطية'
-    bookkeep: 'مبادلة الاجراءات التجارية للمحاسبة'
-    # build_production_chains: 'Build production chains'
-    cancel_sales_invoices: 'الاحذ بالموجودات'
-    change_prices_on_sales: 'تغيير اسعار البيع'
-    close_journals: 'فتح واغلاق الدفاتر اليومية'
-    configure_company: 'تكوين خيارات الشركة'
-    consult_accounting_documents: 'مراجعة الوثائق المحاسبية'
-    consult_entities: 'مراحعة ملفات العملاء / الممولين'
-    consult_journal_entries: 'مراجعة المدخلات'
-    consult_prices: 'مراجعة الاسعار'
-    consult_products: 'مراجعة المنتجات'
-    consult_purchases: 'مراجعة المشتريات'
-    consult_sales: 'مراجعة المبيعات'
-    consult_sales_invoices: 'مراجعة الفواتير' #?
-    consult_stocks: 'مراجعة حالة الاسهم'
-    consult_trackings: 'مراجعة المعلومات التتابعية'
-    extract_listings: '(تنفيذ الاستخراج (دون القدرة على التصور'
-    give_discounts_on_sales: 'منح التخفيضات التجارية للبيع'
-    import_data: 'استيراد البيانات من برامج اخرى'
-    import_export_entities: 'استيراد وتصدير ملفات العملاء / الممولين'
-    mail_to_listings: 'ادارة ارسال رسائل البريد الالكتروني بواسطة الاستخراج'
-    manage_accounts: 'ادارة الحسابات'
-    manage_areas: 'ادارة المناطق'
-    # manage_assets: 'Manage assets'
-    manage_bank_statements: 'كشوفات البيانات الحسابية'
-    # manage_cash_transfers: 'Manage cash transfers'
-    manage_cashes: 'ادارة حسابات الخزينة'
-    manage_custom_fields: 'ادارة الحقول المتخصصة'
-    manage_delays: 'ادارة التأخير'
-    manage_deposits: 'ادارة الاقتطاعات المصرفية'
-    manage_districts: 'ادارة المقطعات'
-    manage_document_templates: 'ادارة نماذج الوثائق'
-    manage_entities: 'ادارة ملفات العملاء / الممولين'
-    manage_entities_natures: 'ادارة انواع الملفات'
-    manage_entity_categories: 'ادارة فئات الملفات'
-    manage_entity_links: 'ادارة الروابط بين الملفات'
-    manage_estimates: 'انشاء وتعديل التقديرات'
-    manage_events: 'ادارة الاحداث'
-    manage_financial_years: 'ادارة وبدأ السنة المالية'
-    # manage_incoming_delivery_modes: 'Manage incoming delivery modes'
-    # manage_incoming_payment_modes: 'Manage incoming payment modes'
-    manage_incoming_payments: 'ادارة قواعد البيع'
-    manage_inventories: 'ادارة عمبيات الجرد'
-    manage_journal_entries: 'ادارة المدخلات'
-    manage_journals: 'ادارة وفتح واغلاق الدفاتر اليومية'
-    # manage_land_parcel_groups: 'Manage groups of land parcels'
-    manage_land_parcels: 'ادارة الهيئة'
-    manage_listings: 'ادارة المستخرج'
-    manage_mandates: 'ادارة التفويضات'
-    manage_observations: 'ادارة الملاحظات'
-    manage_operations: 'ادارة الاجراءات'
-    manage_outgoing_deliveries: 'ادارة انواع التسليم' #?
-    # manage_outgoing_delivery_modes: 'Manage outgoing delivery modes'
-    # manage_outgoing_payment_modes: 'Manage disbursement modes'
-    # manage_outgoing_payments: 'Manage disbursements'
-    manage_payment_modes: 'ادارة طرق الدفع' #?
-    manage_prices: 'ادارة الاموال'
-    manage_product_categories: 'ادارة فئات المنتجات'
-    manage_products: 'ادارة المنتجات'
-    manage_purchases: 'ادارة المشتريات'
-    manage_sale_natures: 'ادارة انواع البيع'
-    manage_sales: '(ادارة المبيعات (الاوامر والطلبات والاسعار'
-    manage_stock_moves: 'ادارة حركات الاسهم'
-    manage_subscriptions: 'ادارة الاشتراكات'
-    manage_taxes: 'ادارة الضرائب'
-    manage_tools: 'ادارة ادوات المنتجات'
-    manage_transports: 'ادارة وسائل النقل'
-    manage_units: 'ادارة وحدات القياس'
-    manage_users: 'ادارة المستخدمين'
-    manage_warehouses: 'ادارة مواقع التخزين'
-    merge_entities: 'دمج ملفات العملاء / الممولين'
-    __minimum__: 'بلوغ الفاعلية كحد ادنى'
-    __not_used__: '(الحق الافتراضي (متعذر بلوغه' #?
-    print: 'الطباعة' #?
-    # __public__: 'Public access'
-    # use_production_chains: 'Use production chains'
+    administrate_accountancy: "مدخل لوحدة المحاسبة" #?
+    backup_company: "تطبيق / تحديث النسخ الاحتياطية"
+    bookkeep: "مبادلة الاجراءات التجارية للمحاسبة"
+    # build_production_chains: "Build production chains"
+    cancel_sales_invoices: "الاحذ بالموجودات"
+    change_prices_on_sales: "تغيير اسعار البيع"
+    close_journals: "فتح واغلاق الدفاتر اليومية"
+    configure_company: "تكوين خيارات الشركة"
+    consult_accounting_documents: "مراجعة الوثائق المحاسبية"
+    consult_entities: "مراحعة ملفات العملاء / الممولين"
+    consult_journal_entries: "مراجعة المدخلات"
+    consult_prices: "مراجعة الاسعار"
+    consult_products: "مراجعة المنتجات"
+    consult_purchases: "مراجعة المشتريات"
+    consult_sales: "مراجعة المبيعات"
+    consult_sales_invoices: "مراجعة الفواتير" #?
+    consult_stocks: "مراجعة حالة الاسهم"
+    consult_trackings: "مراجعة المعلومات التتابعية"
+    extract_listings: "(تنفيذ الاستخراج (دون القدرة على التصور"
+    give_discounts_on_sales: "منح التخفيضات التجارية للبيع"
+    import_data: "استيراد البيانات من برامج اخرى"
+    import_export_entities: "استيراد وتصدير ملفات العملاء / الممولين"
+    mail_to_listings: "ادارة ارسال رسائل البريد الالكتروني بواسطة الاستخراج"
+    manage_accounts: "ادارة الحسابات"
+    manage_areas: "ادارة المناطق"
+    # manage_assets: "Manage assets"
+    manage_bank_statements: "كشوفات البيانات الحسابية"
+    # manage_cash_transfers: "Manage cash transfers"
+    manage_cashes: "ادارة حسابات الخزينة"
+    manage_custom_fields: "ادارة الحقول المتخصصة"
+    manage_delays: "ادارة التأخير"
+    manage_deposits: "ادارة الاقتطاعات المصرفية"
+    manage_districts: "ادارة المقطعات"
+    manage_document_templates: "ادارة نماذج الوثائق"
+    manage_entities: "ادارة ملفات العملاء / الممولين"
+    manage_entities_natures: "ادارة انواع الملفات"
+    manage_entity_categories: "ادارة فئات الملفات"
+    manage_entity_links: "ادارة الروابط بين الملفات"
+    manage_estimates: "انشاء وتعديل التقديرات"
+    manage_events: "ادارة الاحداث"
+    manage_financial_years: "ادارة وبدأ السنة المالية"
+    # manage_incoming_delivery_modes: "Manage incoming delivery modes"
+    # manage_incoming_payment_modes: "Manage incoming payment modes"
+    manage_incoming_payments: "ادارة قواعد البيع"
+    manage_inventories: "ادارة عمبيات الجرد"
+    manage_journal_entries: "ادارة المدخلات"
+    manage_journals: "ادارة وفتح واغلاق الدفاتر اليومية"
+    # manage_land_parcel_groups: "Manage groups of land parcels"
+    manage_land_parcels: "ادارة الهيئة"
+    manage_listings: "ادارة المستخرج"
+    manage_mandates: "ادارة التفويضات"
+    manage_observations: "ادارة الملاحظات"
+    manage_operations: "ادارة الاجراءات"
+    manage_outgoing_deliveries: "ادارة انواع التسليم" #?
+    # manage_outgoing_delivery_modes: "Manage outgoing delivery modes"
+    # manage_outgoing_payment_modes: "Manage disbursement modes"
+    # manage_outgoing_payments: "Manage disbursements"
+    manage_payment_modes: "ادارة طرق الدفع" #?
+    manage_prices: "ادارة الاموال"
+    manage_product_categories: "ادارة فئات المنتجات"
+    manage_products: "ادارة المنتجات"
+    manage_purchases: "ادارة المشتريات"
+    manage_sale_natures: "ادارة انواع البيع"
+    manage_sales: "(ادارة المبيعات (الاوامر والطلبات والاسعار"
+    manage_stock_moves: "ادارة حركات الاسهم"
+    manage_subscriptions: "ادارة الاشتراكات"
+    manage_taxes: "ادارة الضرائب"
+    manage_tools: "ادارة ادوات المنتجات"
+    manage_transports: "ادارة وسائل النقل"
+    manage_units: "ادارة وحدات القياس"
+    manage_users: "ادارة المستخدمين"
+    manage_warehouses: "ادارة مواقع التخزين"
+    merge_entities: "دمج ملفات العملاء / الممولين"
+    __minimum__: "بلوغ الفاعلية كحد ادنى"
+    __not_used__: "(الحق الافتراضي (متعذر بلوغه" #?
+    print: "الطباعة" #?
+    # __public__: "Public access"
+    # use_production_chains: "Use production chains"
