--- a/config/locales/eng/languages.yml
+++ b/config/locales/eng/languages.yml
@@ -1,106 +1,106 @@
 eng:
   languages:
-    afr: 'Afrikaans'
-    amh: 'Amharic'
-    arb: 'Arabic (standard)'
-    aym: 'Aymara'
-    aze: 'Azerbaijani'
-    bel: 'Belarusian'
-    ben: 'Bengali'
-    bis: 'Bislama'
-    bul: 'Bulgarian'
-    cat: 'Catalan'
-    ces: 'Czech'
-    cmn: 'Mandarin Chinese'
-    crs: 'Seselwa Creole French'
-    dan: 'Danish'
-    deu: 'German'
-    div: 'Divehi'
-    dzo: 'Dzongkha'
-    ell: 'Greek'
-    eng: 'English'
-    est: 'Estonian'
-    fas: 'Persian'
-    fij: 'Fijian'
-    fil: 'Filipino'
-    fin: 'Finnish'
-    fra: 'French'
-    gil: 'Gilbertese'
-    gle: 'Irish'
-    grn: 'Guarani'
-    hat: 'Haitian; Haitian Creole'
-    heb: 'Hebrew'
-    hin: 'Hindi'
-    hmo: 'Hiri Motu'
-    hrv: 'Croatian'
-    hun: 'Hungarian'
-    hye: 'Armenian'
-    iba: 'Iban'
-    ind: 'Indonesian'
-    isl: 'Icelandic'
-    ita: 'Italian'
-    jpn: 'Japanese'
-    kat: 'Georgian'
-    kaz: 'Kazakh'
-    khm: 'Khmer'
-    kir: 'Kyrgyz'
-    kor: 'Korean'
-    lao: 'Lao'
-    lat: 'Latin'
-    lav: 'Latvian'
-    lit: 'Lithuanian'
-    ltz: 'Luxembourgish; Letzeburgesch'
-    mah: 'Marshall'
-    mkd: 'Macedonian'
-    mlg: 'Malagasy'
-    mlt: 'Maltese'
-    mon: 'Mongolian'
-    mri: 'Maori'
-    msa: 'Malay (generic)'
-    mya: 'Burmese'
-    nau: 'Nauru'
-    nde: 'Ndebele, North'
-    nep: 'Nepali'
-    nld: 'Dutch'
-    nor: 'Norwegian'
-    nya: 'Chichewa; Nyanja'
-    nzs: 'New Zealand Sign Language'
-    pau: 'Palauan'
-    pol: 'Polish'
-    por: 'Portuguese'
-    pov: 'Crioulo, Upper Guinea'
-    pus: 'Pushto'
-    que: 'Quechua'
-    rar: 'Rarotongan'
-    ron: 'Romanian'
-    run: 'Rundi'
-    rus: 'Russian'
-    sag: 'Sango'
-    sin: 'Sinhala; Sinhalese'
-    slk: 'Slovak'
-    slv: 'Slovenian'
-    smo: 'Samoan'
-    sna: 'Shona'
-    som: 'Somali'
-    sot: 'Sotho, Southern'
-    spa: 'Spanish (Castilian)'
-    sqi: 'Albanian'
-    srp: 'Serbian'
-    swa: 'Swahili (generic)'
-    swb: 'Comorian'
-    swe: 'Swedish'
-    tam: 'Tamil'
-    tet: 'Tetum'
-    tgk: 'Tajik'
-    tha: 'Thai'
-    tir: 'Tigrinya'
-    ton: 'Tonga (Tonga Islands)'
-    tpi: 'Tok Pisin'
-    tuk: 'Turkmen'
-    tur: 'Turkish'
-    tvl: 'Tuvalu'
-    tzm: 'Tamazight, Central Atlas'
-    ukr: 'Ukrainian'
-    urd: 'Urdu'
-    uzb: 'Uzbek'
-    vie: 'Vietnamese'
+    afr: "Afrikaans"
+    amh: "Amharic"
+    arb: "Arabic (standard)"
+    aym: "Aymara"
+    aze: "Azerbaijani"
+    bel: "Belarusian"
+    ben: "Bengali"
+    bis: "Bislama"
+    bul: "Bulgarian"
+    cat: "Catalan"
+    ces: "Czech"
+    cmn: "Mandarin Chinese"
+    crs: "Seselwa Creole French"
+    dan: "Danish"
+    deu: "German"
+    div: "Divehi"
+    dzo: "Dzongkha"
+    ell: "Greek"
+    eng: "English"
+    est: "Estonian"
+    fas: "Persian"
+    fij: "Fijian"
+    fil: "Filipino"
+    fin: "Finnish"
+    fra: "French"
+    gil: "Gilbertese"
+    gle: "Irish"
+    grn: "Guarani"
+    hat: "Haitian; Haitian Creole"
+    heb: "Hebrew"
+    hin: "Hindi"
+    hmo: "Hiri Motu"
+    hrv: "Croatian"
+    hun: "Hungarian"
+    hye: "Armenian"
+    iba: "Iban"
+    ind: "Indonesian"
+    isl: "Icelandic"
+    ita: "Italian"
+    jpn: "Japanese"
+    kat: "Georgian"
+    kaz: "Kazakh"
+    khm: "Khmer"
+    kir: "Kyrgyz"
+    kor: "Korean"
+    lao: "Lao"
+    lat: "Latin"
+    lav: "Latvian"
+    lit: "Lithuanian"
+    ltz: "Luxembourgish; Letzeburgesch"
+    mah: "Marshall"
+    mkd: "Macedonian"
+    mlg: "Malagasy"
+    mlt: "Maltese"
+    mon: "Mongolian"
+    mri: "Maori"
+    msa: "Malay (generic)"
+    mya: "Burmese"
+    nau: "Nauru"
+    nde: "Ndebele, North"
+    nep: "Nepali"
+    nld: "Dutch"
+    nor: "Norwegian"
+    nya: "Chichewa; Nyanja"
+    nzs: "New Zealand Sign Language"
+    pau: "Palauan"
+    pol: "Polish"
+    por: "Portuguese"
+    pov: "Crioulo, Upper Guinea"
+    pus: "Pushto"
+    que: "Quechua"
+    rar: "Rarotongan"
+    ron: "Romanian"
+    run: "Rundi"
+    rus: "Russian"
+    sag: "Sango"
+    sin: "Sinhala; Sinhalese"
+    slk: "Slovak"
+    slv: "Slovenian"
+    smo: "Samoan"
+    sna: "Shona"
+    som: "Somali"
+    sot: "Sotho, Southern"
+    spa: "Spanish (Castilian)"
+    sqi: "Albanian"
+    srp: "Serbian"
+    swa: "Swahili (generic)"
+    swb: "Comorian"
+    swe: "Swedish"
+    tam: "Tamil"
+    tet: "Tetum"
+    tgk: "Tajik"
+    tha: "Thai"
+    tir: "Tigrinya"
+    ton: "Tonga (Tonga Islands)"
+    tpi: "Tok Pisin"
+    tuk: "Turkmen"
+    tur: "Turkish"
+    tvl: "Tuvalu"
+    tzm: "Tamazight, Central Atlas"
+    ukr: "Ukrainian"
+    urd: "Urdu"
+    uzb: "Uzbek"
+    vie: "Vietnamese"
