--- a/config/locales/eng/support.yml
+++ b/config/locales/eng/support.yml
@@ -1,113 +1,113 @@
 eng:
   about:
-    authors: ['Brice Texier', 'Jean-Jacques Vangramberen']
-    dir: 'ltr'
-    iso2: 'en'
-    name: 'English'
+    authors: ["Brice Texier", "Jean-Jacques Vangramberen"]
+    dir: "ltr"
+    iso2: "en"
+    name: "English"
   date:
-    abbr_day_names: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']
-    abbr_month_names: ['', 'jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']
-    day_names: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
+    abbr_day_names: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"]
+    abbr_month_names: ["", "jan", "feb", "mar", "apr", "may", "jun", "jul", "aug", "sep", "oct", "nov", "dec"]
+    day_names: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"]
     formats:
-      default: '%m/%d/%Y'
-      legal: '%d %B %Y'
-      long: '%B %d, %Y'
-      month_letter: '%d %B %Y'
-      short: '%b %d'
-    month_names: ['', 'january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december']
+      default: "%m/%d/%Y"
+      legal: "%d %B %Y"
+      long: "%B %d, %Y"
+      month_letter: "%d %B %Y"
+      short: "%b %d"
+    month_names: ["", "january", "february", "march", "april", "may", "june", "july", "august", "september", "october", "november", "december"]
   datetime:
     distance_in_words:
       about_x_hours:
-        many: 'about %{count} hours'
-        one: 'about 1 hour'
+        many: "about %{count} hours"
+        one: "about 1 hour"
       about_x_months:
-        many: 'about %{count} months'
-        one: 'about 1 month'
+        many: "about %{count} months"
+        one: "about 1 month"
       about_x_years:
-        many: 'about %{count} years'
-        one: 'about 1 year'
-      half_a_minute: 'half a minute'
+        many: "about %{count} years"
+        one: "about 1 year"
+      half_a_minute: "half a minute"
       less_than_x_minutes:
-        many: 'less than %{count} minutes'
-        one: 'less than a minute'
+        many: "less than %{count} minutes"
+        one: "less than a minute"
       less_than_x_seconds:
-        many: 'moins de %{count} secondes'
-        one: 'moins d''une seconde'
+        many: "moins de %{count} secondes"
+        one: "moins d'une seconde"
       over_x_years:
-        many: 'over %{count} years'
-        one: 'over 1 year'
+        many: "over %{count} years"
+        one: "over 1 year"
       x_days:
-        many: '%{count} days'
-        one: '1 day'
+        many: "%{count} days"
+        one: "1 day"
       x_minutes:
-        many: '%{count} minutes'
-        one: '1 minute'
+        many: "%{count} minutes"
+        one: "1 minute"
       x_months:
-        many: '%{count} months'
-        one: '1 month'
+        many: "%{count} months"
+        one: "1 month"
       x_seconds:
-        many: '%{count} secondes'
-        one: '1 seconde'
+        many: "%{count} secondes"
+        one: "1 seconde"
   form:
-    new: 'New…'
+    new: "New…"
   list:
-    columns: 'Columns'
+    columns: "Columns"
     export:
-      false_value: 'FALSE'
+      false_value: "FALSE"
       formats:
-        csv: 'CSV'
-        ods: 'Spreadsheet ODF'
-        xcsv: 'Excel CSV'
-      title: 'Export'
-      true_value: 'TRUE'
-    export_as: 'Export as %{exported}...'
-    items_per_page: 'Items per page'
-    menu: 'Menu'
-    no_records: 'No records'
+        csv: "CSV"
+        ods: "Spreadsheet ODF"
+        xcsv: "Excel CSV"
+      title: "Export"
+      true_value: "TRUE"
+    export_as: "Export as %{exported}..."
+    items_per_page: "Items per page"
+    menu: "Menu"
+    no_records: "No records"
     pagination:
-      first: 'First page'
-      last: 'Last page'
-      next: 'Next page'
-      previous: 'Previous page'
-      showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
+      first: "First page"
+      last: "Last page"
+      next: "Next page"
+      previous: "Previous page"
+      showing_x_to_y_of_total: "Showing %{x} to %{y} of %{total}"
     x_per_page:
-      one: '%{count} per page'
-      other: '%{count} per page'
+      one: "%{count} per page"
+      other: "%{count} per page"
   number:
     currency:
       format:
-        delimiter: ','
-        format: '%u%n'
-        negative_format: '-%n%u'
+        delimiter: ","
+        format: "%u%n"
+        negative_format: "-%n%u"
         precision: 2
-        separator: '.'
-        unit: '$'
+        separator: "."
+        unit: "$"
     format:
-      delimiter: ' '
+      delimiter: " "
       precision: 3
-      separator: ','
+      separator: ","
     human:
       format:
-        delimiter: ''
+        delimiter: ""
         precision: 1
     percentage:
       format:
-        delimiter: ''
+        delimiter: ""
     precision:
       format:
-        delimiter: ''
+        delimiter: ""
   support:
     array:
-      last_word_connector: ' and '
-      sentence_connector: 'and'
-      two_words_connector: ' and '
-      words_connector: ', '
+      last_word_connector: " and "
+      sentence_connector: "and"
+      two_words_connector: " and "
+      words_connector: ", "
   time:
-    am: 'am'
+    am: "am"
     formats:
-      default: '%b. %d, %Y at %H:%M:%S'
-      long: '%B %d, %Y %H:%M'
-      short: '%d %b %H:%M'
-    pm: 'pm'
+      default: "%b. %d, %Y at %H:%M:%S"
+      long: "%B %d, %Y %H:%M"
+      short: "%d %b %H:%M"
+    pm: "pm"
   will_paginate:
-    page_gap: '…'
+    page_gap: "…"
