--- a/config/locales/fra/currencies.yml
+++ b/config/locales/fra/currencies.yml
@@ -1,224 +1,224 @@
 fra:
   currencies:
-    ADF: 'Franc andorran' #?
-    ADP: 'Peseta andorrane' #?
-    AED: 'Dirham des Émirats'
-    AFA: 'Afghani' #?
-    AFN: 'Afghani'
-    ALL: 'Lek (monnaie)'
-    AMD: 'Dram (monnaie)'
-    ANG: 'Florin des Antilles néerlandaises'
-    AOA: 'Kwanza angolais'
-    AOK: 'Kwanza' #?
-    AON: 'Kwanza angolais' #?
-    AOR: 'Kwanza reajustado' #?
-    ARP: 'Peso argentin' #?
-    ARS: 'Peso argentin'
-    ATS: 'Schilling autrichien' #?
-    AUD: 'Dollar australien'
-    AWG: 'Florin d''Aruba'
-    AZM: 'Manat azéri' #?
-    AZN: 'Nouveau manat azéri'
-    BAM: 'Marka (monnaie)'
-    BBD: 'Dollar de la Barbade'
-    BDT: 'Taka'
-    BEF: 'Franc belge' #?
-    BGL: 'Lev bulgare' #?
-    BGN: 'Lev bulgare'
-    BHD: 'Dinar bahreïni'
-    BIF: 'Franc burundais'
-    BMD: 'Dollar des Bermudes'
-    BND: 'Dollar de Brunei'
-    BOB: 'Boliviano'
-    BOP: 'Peso bolivien' #?
-    BOV: 'Mvdol'
-    BRL: 'Réal brésilien'
-    BRR: 'Réal brésilien' #?
-    BSD: 'Dollar bahaméen'
-    BTN: 'Ngultrum'
-    BWP: 'Pula'
-    BYR: 'Rouble biélorusse'
-    BZD: 'Dollar de Belize'
-    CAD: 'Dollar canadien'
-    CDF: 'Franc congolais'
-    CHE: 'Euro WIR'
-    CHF: 'Franc suisse'
-    CHW: 'Franc WIR'
-    CLF: 'Unidad de formento'
-    CLP: 'Peso chilien'
-    CNY: 'Yuan renminbi'
-    COP: 'Peso colombien'
-    COU: 'Unidad de valor real'
-    CRC: 'Colon costaricain'
-    CSD: 'Dinar serbo-monténégrin' #?
-    CSK: 'Couronne tchécoslovaque' #?
-    CUC: 'Peso cubain convertible'
-    CUP: 'Peso cubain'
-    CVE: 'Escudo cap-verdien'
-    CYP: 'Livre chypriote' #?
-    CZK: 'Couronne tchèque'
-    DEM: 'Deutsche Mark' #?
-    DJF: 'Franc Djibouti'
-    DKK: 'Couronne danoise'
-    DOP: 'Peso dominicain'
-    DZD: 'Dinar algérien'
-    ECS: 'Sucre (monnaie)' #?
-    ECV: 'Unidad de valor constante' #?
-    EEK: 'Couronne estonienne' #?
-    EGP: 'Livre égyptienne'
-    ERN: 'Nakfa'
-    ESP: 'Peseta espagnole' #?
-    ETB: 'Birr'
-    EUR: 'Euro'
-    FIM: 'Markka' #?
-    FJD: 'Dollar fidjien'
-    FKP: 'Livre des Îles Malouines'
-    FRF: 'Franc français'
-    GBP: 'Livre sterling'
-    GEL: 'Lari (monnaie)'
-    GHS: 'Cedi'
-    GIP: 'Livre de Gibraltar'
-    GMD: 'Dalasi'
-    GNF: 'Franc guinéen'
-    GRD: 'Drachme' #?
-    GTQ: 'Quetzal guatémaltèque'
-    GWP: 'Peso de Guinée-Bissau' #?
-    GYD: 'Dollar du Guyana'
-    HKD: 'Dollar de Hong-Kong'
-    HNL: 'Lempira hondurien'
-    HRK: 'Kuna (monnaie)'
-    HTG: 'Gourde haïtienne'
-    HUF: 'Forint'
-    IDR: 'Roupie indonésienne'
-    IEP: 'Livre irlandaise' #?
-    ILS: 'Nouveau shekel'
-    INR: 'Roupie indienne'
-    IQD: 'Dinar irakien'
-    IRR: 'Rial iranien'
-    ISK: 'Couronne islandaise'
-    ITL: 'Lire italienne' #?
-    JMD: 'Dollar jamaïcain'
-    JOD: 'Dinar jordanien'
-    JPY: 'Yen'
-    KES: 'Shilling kényan'
-    KGS: 'Som'
-    KHR: 'Riel'
-    KMF: 'Franc comorien'
-    KPW: 'Won'
-    KRW: 'Won'
-    KWD: 'Dinar koweïtien'
-    KYD: 'Dollar des Îles Caïmans'
-    KZT: 'Tenge'
-    LAK: 'Kip'
-    LBP: 'Livre libanaise'
-    LKR: 'Roupie srilankaise'
-    LRD: 'Dollar libérien'
-    LSL: 'Loti'
-    LTL: 'Litas'
-    LUF: 'Franc luxembourgeois' #?
-    LVL: 'Lats letton'
-    LVR: 'Rouble letton' #?
-    LYD: 'Dinar libyen'
-    MAD: 'Dirham marocain'
-    MDL: 'Leu moldave'
-    MGA: 'Ariary'
-    MGF: 'Franc malgache' #?
-    MKD: 'Denar'
-    MMK: 'Kyat'
-    MNT: 'Tugrik'
-    MOP: 'Pataca'
-    MRO: 'Ouguiya'
-    MTL: 'Lire maltaise' #?
-    MUR: 'Roupie mauricienne'
-    MVR: 'Rufiyaa'
-    MWK: 'Kwacha malawite'
-    MXN: 'Peso mexicain'
-    MXV: 'Unidad de inversión'
-    MYR: 'Ringgit'
-    MZE: 'Escudo mozambicain' #?
-    MZM: 'Metical' #?
-    MZN: 'Metical'
-    NAD: 'Dollar namibien'
-    NGN: 'Naira'
-    NIC: 'Córdoba nicaraguayen' #?
-    NIO: 'Córdoba nicaraguayen'
-    NLG: 'Florin néerlandais' #?
-    NOK: 'Couronne norvégienne'
-    NPR: 'Roupie népalaise'
-    NZD: 'Dollar néo-zélandais'
-    OMR: 'Rial omanais'
-    PAB: 'Balboa panaméen'
-    PEN: 'Nuevo sol'
-    PES: 'Sol péruvien' #?
-    PGK: 'Kina'
-    PHP: 'Peso philippin'
-    PKR: 'Roupie pakistanaise'
-    PLN: 'Zloty'
-    PLZ: 'Zloty' #?
-    PTE: 'Escudo portugais' #?
-    PYG: 'Guarani (monnaie)'
-    QAR: 'Rial qatari'
-    ROL: 'Leu roumain' #?
-    RON: 'Leu roumain'
-    RSD: 'Dinar serbe'
-    RUB: 'Rouble russe'
-    RWF: 'Franc rwandais'
-    SAR: 'Riyal saoudien'
-    SBD: 'Dollar des îles Salomon'
-    SCR: 'Roupie seychelloise'
-    SDD: 'Dinar soudanais' #?
-    SDG: 'Livre soudanaise'
-    SDP: 'Livre soudanaise' #?
-    SEK: 'Couronne suédoise'
-    SGD: 'Dollar singapourien'
-    SHP: 'Livre de Sainte-Hélène'
-    SIT: 'Tolar' #?
-    SKK: 'Couronne slovaque' #?
-    SLL: 'Leone'
-    SML: 'Lire san marinaise' #?
-    SOS: 'Shilling somalien'
-    SRD: 'Dollar surinamien'
-    SSP: 'Livre sud-soudanaise'
-    STD: 'Dobra'
-    SUB: 'Rouble soviétique' #?
-    SUR: 'Rouble soviétique' #?
-    SVC: 'Colon salvadorien'
-    SYP: 'Livre syrienne'
-    SZL: 'Lilangeni'
-    THB: 'Baht'
-    TJS: 'Somoni'
-    TMM: 'Manat turkmène' #?
-    TMT: 'Manat turkmène'
-    TND: 'Dinar tunisien'
-    TOP: 'Pa''anga'
-    TPE: 'Escudo du Timor oriental' #?
-    TRL: 'Livre turque' #?
-    TRY: 'Livre turque'
-    TTD: 'Dollar de Trinité-et-Tobago'
-    TWD: 'Dollar taïwanais'
-    TZS: 'Shilling tanzanien'
-    UAH: 'Hryvnia'
-    UGX: 'Shilling ougandais'
-    USD: 'Dollar américain'
-    USN: 'Dollar américain'
-    USS: 'Dollar américain'
-    UYI: 'Peso uruguayen en unités indexées (URUIURUI)'
-    UYU: 'Peso uruguayen'
-    UZS: 'Sum (monnaie)'
-    VAL: 'Lire vaticanne' #?
-    VEB: 'Bolívar vénézuélien' #?
-    VEF: 'Bolívar vénézuélien'
-    VND: 'Dong (monnaie)'
-    VUV: 'Vatu'
-    WST: 'Tala'
-    YER: 'Rial yéménite'
-    YUD: 'Dinar yougoslave' #?
-    YUM: 'Dinar yougoslave' #?
-    ZAR: 'Rand'
-    ZMK: 'Kwacha zambien'
-    ZWD: 'Dollar zimbabwéen' #?
-    ZWL: 'Dollar zimbabwéen'
-    ZWR: 'Dollar zimbabwéen' #?
+    ADF: "Franc andorran" #?
+    ADP: "Peseta andorrane" #?
+    AED: "Dirham des Émirats"
+    AFA: "Afghani" #?
+    AFN: "Afghani"
+    ALL: "Lek (monnaie)"
+    AMD: "Dram (monnaie)"
+    ANG: "Florin des Antilles néerlandaises"
+    AOA: "Kwanza angolais"
+    AOK: "Kwanza" #?
+    AON: "Kwanza angolais" #?
+    AOR: "Kwanza reajustado" #?
+    ARP: "Peso argentin" #?
+    ARS: "Peso argentin"
+    ATS: "Schilling autrichien" #?
+    AUD: "Dollar australien"
+    AWG: "Florin d'Aruba"
+    AZM: "Manat azéri" #?
+    AZN: "Nouveau manat azéri"
+    BAM: "Marka (monnaie)"
+    BBD: "Dollar de la Barbade"
+    BDT: "Taka"
+    BEF: "Franc belge" #?
+    BGL: "Lev bulgare" #?
+    BGN: "Lev bulgare"
+    BHD: "Dinar bahreïni"
+    BIF: "Franc burundais"
+    BMD: "Dollar des Bermudes"
+    BND: "Dollar de Brunei"
+    BOB: "Boliviano"
+    BOP: "Peso bolivien" #?
+    BOV: "Mvdol"
+    BRL: "Réal brésilien"
+    BRR: "Réal brésilien" #?
+    BSD: "Dollar bahaméen"
+    BTN: "Ngultrum"
+    BWP: "Pula"
+    BYR: "Rouble biélorusse"
+    BZD: "Dollar de Belize"
+    CAD: "Dollar canadien"
+    CDF: "Franc congolais"
+    CHE: "Euro WIR"
+    CHF: "Franc suisse"
+    CHW: "Franc WIR"
+    CLF: "Unidad de formento"
+    CLP: "Peso chilien"
+    CNY: "Yuan renminbi"
+    COP: "Peso colombien"
+    COU: "Unidad de valor real"
+    CRC: "Colon costaricain"
+    CSD: "Dinar serbo-monténégrin" #?
+    CSK: "Couronne tchécoslovaque" #?
+    CUC: "Peso cubain convertible"
+    CUP: "Peso cubain"
+    CVE: "Escudo cap-verdien"
+    CYP: "Livre chypriote" #?
+    CZK: "Couronne tchèque"
+    DEM: "Deutsche Mark" #?
+    DJF: "Franc Djibouti"
+    DKK: "Couronne danoise"
+    DOP: "Peso dominicain"
+    DZD: "Dinar algérien"
+    ECS: "Sucre (monnaie)" #?
+    ECV: "Unidad de valor constante" #?
+    EEK: "Couronne estonienne" #?
+    EGP: "Livre égyptienne"
+    ERN: "Nakfa"
+    ESP: "Peseta espagnole" #?
+    ETB: "Birr"
+    EUR: "Euro"
+    FIM: "Markka" #?
+    FJD: "Dollar fidjien"
+    FKP: "Livre des Îles Malouines"
+    FRF: "Franc français"
+    GBP: "Livre sterling"
+    GEL: "Lari (monnaie)"
+    GHS: "Cedi"
+    GIP: "Livre de Gibraltar"
+    GMD: "Dalasi"
+    GNF: "Franc guinéen"
+    GRD: "Drachme" #?
+    GTQ: "Quetzal guatémaltèque"
+    GWP: "Peso de Guinée-Bissau" #?
+    GYD: "Dollar du Guyana"
+    HKD: "Dollar de Hong-Kong"
+    HNL: "Lempira hondurien"
+    HRK: "Kuna (monnaie)"
+    HTG: "Gourde haïtienne"
+    HUF: "Forint"
+    IDR: "Roupie indonésienne"
+    IEP: "Livre irlandaise" #?
+    ILS: "Nouveau shekel"
+    INR: "Roupie indienne"
+    IQD: "Dinar irakien"
+    IRR: "Rial iranien"
+    ISK: "Couronne islandaise"
+    ITL: "Lire italienne" #?
+    JMD: "Dollar jamaïcain"
+    JOD: "Dinar jordanien"
+    JPY: "Yen"
+    KES: "Shilling kényan"
+    KGS: "Som"
+    KHR: "Riel"
+    KMF: "Franc comorien"
+    KPW: "Won"
+    KRW: "Won"
+    KWD: "Dinar koweïtien"
+    KYD: "Dollar des Îles Caïmans"
+    KZT: "Tenge"
+    LAK: "Kip"
+    LBP: "Livre libanaise"
+    LKR: "Roupie srilankaise"
+    LRD: "Dollar libérien"
+    LSL: "Loti"
+    LTL: "Litas"
+    LUF: "Franc luxembourgeois" #?
+    LVL: "Lats letton"
+    LVR: "Rouble letton" #?
+    LYD: "Dinar libyen"
+    MAD: "Dirham marocain"
+    MDL: "Leu moldave"
+    MGA: "Ariary"
+    MGF: "Franc malgache" #?
+    MKD: "Denar"
+    MMK: "Kyat"
+    MNT: "Tugrik"
+    MOP: "Pataca"
+    MRO: "Ouguiya"
+    MTL: "Lire maltaise" #?
+    MUR: "Roupie mauricienne"
+    MVR: "Rufiyaa"
+    MWK: "Kwacha malawite"
+    MXN: "Peso mexicain"
+    MXV: "Unidad de inversión"
+    MYR: "Ringgit"
+    MZE: "Escudo mozambicain" #?
+    MZM: "Metical" #?
+    MZN: "Metical"
+    NAD: "Dollar namibien"
+    NGN: "Naira"
+    NIC: "Córdoba nicaraguayen" #?
+    NIO: "Córdoba nicaraguayen"
+    NLG: "Florin néerlandais" #?
+    NOK: "Couronne norvégienne"
+    NPR: "Roupie népalaise"
+    NZD: "Dollar néo-zélandais"
+    OMR: "Rial omanais"
+    PAB: "Balboa panaméen"
+    PEN: "Nuevo sol"
+    PES: "Sol péruvien" #?
+    PGK: "Kina"
+    PHP: "Peso philippin"
+    PKR: "Roupie pakistanaise"
+    PLN: "Zloty"
+    PLZ: "Zloty" #?
+    PTE: "Escudo portugais" #?
+    PYG: "Guarani (monnaie)"
+    QAR: "Rial qatari"
+    ROL: "Leu roumain" #?
+    RON: "Leu roumain"
+    RSD: "Dinar serbe"
+    RUB: "Rouble russe"
+    RWF: "Franc rwandais"
+    SAR: "Riyal saoudien"
+    SBD: "Dollar des îles Salomon"
+    SCR: "Roupie seychelloise"
+    SDD: "Dinar soudanais" #?
+    SDG: "Livre soudanaise"
+    SDP: "Livre soudanaise" #?
+    SEK: "Couronne suédoise"
+    SGD: "Dollar singapourien"
+    SHP: "Livre de Sainte-Hélène"
+    SIT: "Tolar" #?
+    SKK: "Couronne slovaque" #?
+    SLL: "Leone"
+    SML: "Lire san marinaise" #?
+    SOS: "Shilling somalien"
+    SRD: "Dollar surinamien"
+    SSP: "Livre sud-soudanaise"
+    STD: "Dobra"
+    SUB: "Rouble soviétique" #?
+    SUR: "Rouble soviétique" #?
+    SVC: "Colon salvadorien"
+    SYP: "Livre syrienne"
+    SZL: "Lilangeni"
+    THB: "Baht"
+    TJS: "Somoni"
+    TMM: "Manat turkmène" #?
+    TMT: "Manat turkmène"
+    TND: "Dinar tunisien"
+    TOP: "Pa'anga"
+    TPE: "Escudo du Timor oriental" #?
+    TRL: "Livre turque" #?
+    TRY: "Livre turque"
+    TTD: "Dollar de Trinité-et-Tobago"
+    TWD: "Dollar taïwanais"
+    TZS: "Shilling tanzanien"
+    UAH: "Hryvnia"
+    UGX: "Shilling ougandais"
+    USD: "Dollar américain"
+    USN: "Dollar américain"
+    USS: "Dollar américain"
+    UYI: "Peso uruguayen en unités indexées (URUIURUI)"
+    UYU: "Peso uruguayen"
+    UZS: "Sum (monnaie)"
+    VAL: "Lire vaticanne" #?
+    VEB: "Bolívar vénézuélien" #?
+    VEF: "Bolívar vénézuélien"
+    VND: "Dong (monnaie)"
+    VUV: "Vatu"
+    WST: "Tala"
+    YER: "Rial yéménite"
+    YUD: "Dinar yougoslave" #?
+    YUM: "Dinar yougoslave" #?
+    ZAR: "Rand"
+    ZMK: "Kwacha zambien"
+    ZWD: "Dollar zimbabwéen" #?
+    ZWL: "Dollar zimbabwéen"
+    ZWR: "Dollar zimbabwéen" #?
   number:
     currency:
       formats: #?
