--- a/config/locales/jpn/support.yml
+++ b/config/locales/jpn/support.yml
@@ -1,115 +1,115 @@
 jpn:
   about:
-    authors: ['Brice Texier']
-    dir: 'ltr'
-    iso2: 'ja'
-    name: '日本語'
+    authors: ["Brice Texier"]
+    dir: "ltr"
+    iso2: "ja"
+    name: "日本語"
   date:
-    abbr_day_names: ['日', '月', '火', '水', '木', '金', '土']
-    abbr_month_names: ['', '一', '二', '三', '四', '五', '六', '七', '八', '九', '十', '十一', '十二']
-    day_names: ['日曜日', '月曜日', '火曜日', '水曜日', '木曜日', '金曜日', '土曜日']
+    abbr_day_names: ["日", "月", "火", "水", "木", "金", "土"]
+    abbr_month_names: ["", "一", "二", "三", "四", "五", "六", "七", "八", "九", "十", "十一", "十二"]
+    day_names: ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"]
     formats:
-      default: '%Y年%m月%d日'
-      legal: '%d %B %Y'
-      long: '%B %d, %Y'
-      month_letter: '%d %B %Y'
-      short: '%b %d'
-    month_names: ['', '一月', '二月', '三月', '四月', '五月', '六月', '七月', '八月', '九月', '十月', '十一月', '十二月']
+      default: "%Y年%m月%d日"
+      legal: "%d %B %Y"
+      long: "%B %d, %Y"
+      month_letter: "%d %B %Y"
+      short: "%b %d"
+    month_names: ["", "一月", "二月", "三月", "四月", "五月", "六月", "七月", "八月", "九月", "十月", "十一月", "十二月"]
   datetime:
     distance_in_words:
       about_x_hours:
-        many: '約%{count}時間'
-        one: '約%{count}時間'
+        many: "約%{count}時間"
+        one: "約%{count}時間"
       about_x_months:
-        many: '約%{count}ヶ月'
-        one: '約%{count}ヶ月'
+        many: "約%{count}ヶ月"
+        one: "約%{count}ヶ月"
       about_x_years:
-        many: '約%{count}年'
-        one: '約%{count}年'
-      half_a_minute: '分半'
+        many: "約%{count}年"
+        one: "約%{count}年"
+      half_a_minute: "分半"
       less_than_x_minutes:
-        # many: 'less than %{count} minutes'
-        # one: 'less than a minute'
+        # many: "less than %{count} minutes"
+        # one: "less than a minute"
       less_than_x_seconds:
-        # many: 'moins de %{count} secondes'
-        # one: 'moins d''une seconde'
+        # many: "moins de %{count} secondes"
+        # one: "moins d'une seconde"
       over_x_years:
-        # many: 'over %{count} years'
-        # one: 'over 1 year'
+        # many: "over %{count} years"
+        # one: "over 1 year"
       x_days:
-        many: '%{count}日間'
-        one: '%{count}日間'
+        many: "%{count}日間"
+        one: "%{count}日間"
       x_minutes:
-        many: '%{count}分間'
-        one: '%{count}分間'
+        many: "%{count}分間"
+        one: "%{count}分間"
       x_months:
-        many: '%{count}ヶ月間'
-        one: '%{count}ヶ月間'
+        many: "%{count}ヶ月間"
+        one: "%{count}ヶ月間"
       x_seconds:
-        many: '%{count}秒間'
-        one: '%{count}秒間'
+        many: "%{count}秒間"
+        one: "%{count}秒間"
   form:
-    # new: 'New…'
+    # new: "New…"
   list:
-    columns: '列'
+    columns: "列"
     export:
-      false_value: '偽'
+      false_value: "偽"
       formats:
-        csv: 'CSV'
-        # ods: 'Spreadsheet ODF'
-        xcsv: 'ExcelのCSV'
-      # title: 'Export'
-      true_value: '真'
-    # export_as: 'Export as %{exported}...'
-    # items_per_page: 'Items per page'
-    menu: 'メニュー'
-    next: '次へ' #?
-    no_records: '空'
+        csv: "CSV"
+        # ods: "Spreadsheet ODF"
+        xcsv: "ExcelのCSV"
+      # title: "Export"
+      true_value: "真"
+    # export_as: "Export as %{exported}..."
+    # items_per_page: "Items per page"
+    menu: "メニュー"
+    next: "次へ" #?
+    no_records: "空"
     pagination:
-      # first: 'First page'
-      # last: 'Last page'
-      # next: 'Next page'
-      # previous: 'Previous page'
-      # showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
-    previous: '前へ' #?
+      # first: "First page"
+      # last: "Last page"
+      # next: "Next page"
+      # previous: "Previous page"
+      # showing_x_to_y_of_total: "Showing %{x} to %{y} of %{total}"
+    previous: "前へ" #?
     x_per_page:
-      one: 'ページあたり%{count}行'
-      other: 'ページあたり%{count}行'
+      one: "ページあたり%{count}行"
+      other: "ページあたり%{count}行"
   number:
     currency:
       format:
-        delimiter: ''
-        format: '%u%n'
-        # negative_format: '-%n%u'
+        delimiter: ""
+        format: "%u%n"
+        # negative_format: "-%n%u"
         precision: 2
-        separator: '.'
-        unit: '円'
+        separator: "."
+        unit: "円"
     format:
-      delimiter: ' '
+      delimiter: " "
       precision: 3
-      separator: ','
+      separator: ","
     human:
       format:
-        delimiter: ''
+        delimiter: ""
         precision: 1
     percentage:
       format:
-        delimiter: ''
+        delimiter: ""
     precision:
       format:
-        delimiter: ''
+        delimiter: ""
   support:
     array:
-      last_word_connector: 'と'
-      sentence_connector: 'と'
-      two_words_connector: 'と'
-      words_connector: 'と'
+      last_word_connector: "と"
+      sentence_connector: "と"
+      two_words_connector: "と"
+      words_connector: "と"
   time:
-    am: 'am'
+    am: "am"
     formats:
-      default: '%Y年%m月%d日 %H:%M:%S'
-      long: '%B %d, %Y %H:%M'
-      short: '%d %b %H:%M'
-    pm: 'pm'
+      default: "%Y年%m月%d日 %H:%M:%S"
+      long: "%B %d, %Y %H:%M"
+      short: "%d %b %H:%M"
+    pm: "pm"
   will_paginate:
-    page_gap: '⋯'
+    page_gap: "⋯"
