--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -996,6 +996,7 @@ eng:
         journals:
           bank: "Bank"
           cash: "Cash"
+          forward: "Carried-forward"
           purchases: "Purchases"
           sales: "Sales"
           various: "Various operations"
@@ -1014,6 +1015,9 @@ eng:
             public: "Public (no rights)"
         sale_nature_name: "Standard"
         sequences:
+          assets:
+            name: "Numeration of assets"
+            number_format: "A[number|7]"
           cash_transfers:
             name: "Numeration of cash transfers"
             number_format: "CT[year|4][number|4]"
