--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1004,6 +1004,7 @@ spa:
         journals:
           # bank: "Bank"
           # cash: "Cash"
+          # forward: "Carried-forward"
           # purchases: "Purchases"
           # sales: "Sales"
           # various: "Various operations"
@@ -1022,6 +1023,9 @@ spa:
             # public: "Public (no rights)"
         # sale_nature_name: "Standard"
         sequences:
+          assets:
+            # name: "Numeration of assets"
+            # number_format: "A[number|7]"
           cash_transfers:
             # name: "Numeration of cash transfers"
             # number_format: "CT[year|4][number|4]"
