--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1654,6 +1654,7 @@ arb:
         purchases: "مشتريات دورية افتراضية" #?
         sales: "مبيعات دورية افتراضية" #?
         various: "الاجراءات اليومية المختلفة افتراضيا" #?
+    # assets_sequence: "Numeration of assets"
     # bank_journal: "Default bank journal"
     # bookkeep_automatically: "Activate the automatic bookkeeping"
     # bookkeep_in_draft: "Save the records in draft mode during bookkeeping"
