--- a/config/locales/fra/help/professions-index.txt
+++ b/config/locales/fra/help/professions-index.txt
@@ -4,5 +4,5 @@
 Une profession est une activité manuelle ou intellectuelle procurant un salaire, une rémunération, des revenus à celui qui l'exerce. C'est un métier appartenant à un ensemble dans un secteur d'activité particulier.
 
 ===== Gestion d'un journal comptable =====
-Pour référencer une profession précise (lors de l'ajout d'un nouveau salarié), commencer par la [[>professions/new|créer]]. La profession crée apparaîtra dans le listing des professions. Par la suite, il vous sera possible de la modifier {{theme:buttons/update.png|modifier}}, de la supprimer {{theme:buttons/delete.png|supprimer}}, sous condition qu'il n'existe aucun employé ayant cette profession.
+Pour référencer une profession précise (lors de l'ajout d'un nouveau salarié), commencer par la [[>professions/new|créer]]. La profession crée apparaîtra dans le listing des professions. Par la suite, il vous sera possible de la modifier {{theme:icons/edit.png|modifier}}, de la supprimer {{theme:icons/destroy.png|supprimer}}, sous condition qu'il n'existe aucun employé ayant cette profession.
  
