--- a/config/locales/fra/help/sale_natures-index.txt
+++ b/config/locales/fra/help/sale_natures-index.txt
@@ -4,7 +4,7 @@ Les types de vente permettent de **définir des caractéristiques des vente**, t
 
 Vous pouvez :
   * **créer** un type de vente
-  * le **modifier** :  {{theme:buttons/update.png|modifier}}
-  * le **supprimer** : {{theme:buttons/delete.png|supprimer}}
+  * le **modifier** :  {{theme:icons/edit.png|modifier}}
+  * le **supprimer** : {{theme:icons/destroy.png|supprimer}}
 
  
