Reviews assets and begins to define depreciation methods

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -22,6 +22,8 @@ arb:
       index: "العناوين البريد"
       new: "اضافة عنوان بريدي"
     assets:
+      # cede: "Cede %{name}"
+      # depreciate: "Compute depreciations of %{name}"
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
