--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -424,6 +424,7 @@ eng:
     currency: "Currency"
     currency_precision: "Currency precision"
     currency_rate: "Currency rate"
+    current_amount: "Current amount"
     current_financial_year: "Current financial year"
     custom_field: "Custom field"
     custom_field_choices: "Custom field choices"
@@ -461,8 +462,8 @@ eng:
     depositables_incoming_payment_modes: "Depositables incoming payment modes"
     depositables_journal: "Depositables journal"
     deposits: "Deposits"
-    deprecated_amount: "Deprecated amount"
     depreciable_amount: "Depreciable amount"
+    depreciated_amount: "Depreciated amount"
     depreciation: "Depreciation"
     depreciation_method: "Depreciation method"
     depreciations: "Depreciations"
@@ -703,6 +704,7 @@ eng:
     phone: "Phone"
     photo: "Photo"
     physical: "Physical"
+    # planned_depreciations: "Planned depreciations"
     planned_on: "Planned on"
     position: "Position"
     postcode: "Postcode"
@@ -731,6 +733,7 @@ eng:
     propagate_contacts: "Propagate contacts"
     proposer: "Proposer"
     prospect: "Prospect"
+    # protected: "Protected"
     published: "Published"
     purchase: "Purchase"
     purchase_amount: "Purchase amount"
