--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -437,6 +437,7 @@ fra:
     currency: "Devise"
     currency_precision: "Nombre de décimales"
     currency_rate: "Taux de change"
+    # current_amount: "Current amount"
     current_financial_year: "Exercice comptable en cours"
     custom_field: "Champ complémentaire"
     custom_field_choices: "Choix de champ complémentaire"
@@ -476,11 +477,11 @@ fra:
     depositables_incoming_payment_modes: "Modes de paiement avec remises en banque"
     depositables_journal: "Journal des remises en banque"
     deposits: "Remises en banque"
-    deprecated_amount: "Montant déprécié"
-    depreciable_amount: "Montant dépréciable"
-    depreciation: "Dépréciation"
-    depreciation_method: "Méthode dépréciation"
-    depreciations: "Dpreciations"
+    depreciable_amount: "Montant amortissable"
+    depreciated_amount: "Montant amorti"
+    depreciation: "Amortissement"
+    depreciation_method: "Méthode d'amortissement"
+    depreciations: "Amortissements"
     description: "Description"
     diff_less: "Droits enlevés"
     diff_more: "Droits rajoutés"
