--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -16,6 +16,8 @@ jpn:
       # index: "Postal areas"
       # new: "Add a postal area"
     assets:
+      # cede: "Cede %{name}"
+      # depreciate: "Compute depreciations of %{name}"
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
