--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -14,6 +14,8 @@ fra:
       index: "Zones postales"
       new: "Ajouter une zone postale"
     assets:
+      cede: "Céder l’immobilisation"
+      depreciate: "Calculer l’amortissement de l’immobilisation\_: %{name}"
       edit: "Modifier l’immobilisation\_: %{name}"
       index: "Immobilisations"
       new: "Nouvelle immobilisation"
