--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -429,6 +429,7 @@ jpn:
     # currency: "Currency"
     # currency_precision: "Currency precision"
     # currency_rate: "Currency rate"
+    # current_amount: "Current amount"
     # current_financial_year: "Current financial year"
     # custom_field: "Custom field"
     # custom_field_choices: "Custom field choices"
@@ -466,8 +467,8 @@ jpn:
     # depositables_incoming_payment_modes: "Depositables incoming payment modes"
     # depositables_journal: "Depositables journal"
     # deposits: "Deposits"
-    # deprecated_amount: "Deprecated amount"
     # depreciable_amount: "Depreciable amount"
+    # depreciated_amount: "Depreciated amount"
     # depreciation: "Depreciation"
     # depreciation_method: "Depreciation method"
     # depreciations: "Depreciations"
