--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -22,6 +22,8 @@ spa:
       # index: "Postal areas"
       # new: "Add a postal area"
     assets:
+      # cede: "Cede %{name}"
+      # depreciate: "Compute depreciations of %{name}"
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
