Fixes simplified linear depreciation method

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -27,6 +27,7 @@ arb:
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
+      # sell: "Sell asset"
       # show: "Asset: %{name}"
     authentication:  #?
       login: "الدخول" #?
