--- a/config/locales/fra/rights.yml
+++ b/config/locales/fra/rights.yml
@@ -23,7 +23,7 @@ fra:
     mail_to_listings: "Gérer l’envoi de courriels par les extractions"
     manage_accounts: "Gérer les comptes comptables"
     manage_areas: "Gérer les zones"
-    # manage_assets: "Manage assets"
+    manage_assets: "Gérer les immobilisations"
     manage_bank_statements: "Pointage des relevés de comptes"
     manage_cash_transfers: "Gérer les virements internes"
     manage_cashes: "Gérer les comptes de trésorerie"
@@ -57,6 +57,7 @@ fra:
     manage_prices: "Gérer les prix"
     manage_product_categories: "Gérer les catégories de produits"
     manage_products: "Gérer les produits"
+    manage_purchase_natures: "Gérer les types d’achat"
     manage_purchases: "Gérer les achats"
     manage_sale_natures: "Gérer les types de vente"
     manage_sales: "Gérer les ventes (devis, commandes et livraisons)"
