--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -21,6 +21,7 @@ jpn:
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
+      # sell: "Sell asset"
       # show: "Asset: %{name}"
     authentication:  #?
       login: "ログイン" #?
