--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -387,6 +387,7 @@ jpn:
     # client_account: "Client account"
     # client_accounts: "Client accounts"
     # clients: "Clients"
+    # closable_financial_year: "Closable financial year"
     # closed: "Closed"
     # closed_on: "Closed on"
     code: "コード"
@@ -402,7 +403,7 @@ jpn:
     # commission_account: "Commission account"
     # commission_amount: "Commission amount"
     # commission_base_amount: "Base amount of the commission"
-    # commission_percent: "Commission percent"
+    # commission_percent: "Commission percentage"
     # commissioned_incoming_payment_modes: "Commissioned incoming payment modes"
     company: "会社"
     company_id: "会社" #?
@@ -476,6 +477,7 @@ jpn:
     # depreciated_amount: "Depreciated amount"
     # depreciation: "Depreciation"
     # depreciation_method: "Depreciation method"
+    # depreciation_percentage: "Depreciation percentage"
     # depreciations: "Depreciations"
     # description: "Description"
     # diff_less: "Diff less"
@@ -541,6 +543,7 @@ jpn:
     # financial_year: "Financial year"
     # financial_years: "Financial years"
     # finish: "Finish"
+    # first_financial_year: "First financial year"
     # first_met_on: "First met on"
     # first_name: "First name"
     # first_number: "First number"
@@ -715,6 +718,7 @@ jpn:
     # phone: "Phone"
     # photo: "Photo"
     # physical: "Physical"
+    # planned_depreciations: "Planned depreciations"
     # planned_on: "Planned on"
     # position: "Position"
     # postcode: "Postcode"
@@ -743,6 +747,7 @@ jpn:
     # propagate_contacts: "Propagate contacts"
     # proposer: "Proposer"
     # prospect: "Prospect"
+    # protected: "Protected"
     # published: "Published"
     # purchase: "Purchase"
     # purchase_amount: "Purchase amount"
@@ -773,7 +778,7 @@ jpn:
     # reductible: "Reductible"
     # reduction: "Reduction"
     # reduction_origin: "Reduction origin"
-    # reduction_percent: "Reduction percent"
+    # reduction_percent: "Reduction percentage"
     # reduction_rate: "Reduction rate"
     # reduction_submissive: "Reduction submissive"
     # reductions: "Reductions"
@@ -936,6 +941,7 @@ jpn:
       depreciation_methods:
         # graduated: "Graduated"
         # linear: "Linear"
+        # simplified_linear: "Simplified linear"
     bank_statement: #?
     cash:
       modes:
@@ -1376,7 +1382,7 @@ jpn:
     tax:
       natures:
         # amount: "Amount"
-        # percent: "Percent"
+        # percent: "Percentage"
     tax_declaration:
       # deferment: "Deferment"
       # monthly: "Monthly"
