--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -384,6 +384,7 @@ eng:
     client_account: "Client account"
     client_accounts: "Client accounts"
     clients: "Clients"
+    closable_financial_year: "Closable financial year"
     closed: "Closed"
     closed_on: "Closed on"
     code: "Code"
@@ -399,7 +400,7 @@ eng:
     commission_account: "Commission account"
     commission_amount: "Commission amount"
     commission_base_amount: "Base amount of the commission"
-    commission_percent: "Commission percent"
+    commission_percent: "Commission percentage"
     commissioned_incoming_payment_modes: "Commissioned incoming payment modes"
     company: "Company"
     component: "Component"
@@ -471,6 +472,7 @@ eng:
     depreciated_amount: "Depreciated amount"
     depreciation: "Depreciation"
     depreciation_method: "Depreciation method"
+    depreciation_percentage: "Depreciation percentage"
     depreciations: "Depreciations"
     description: "Description"
     diff_less: "Diff less"
@@ -536,7 +538,7 @@ eng:
     financial_year: "Financial year"
     financial_years: "Financial years"
     finish: "Finish"
-    # first_financial_year: "First financial year"
+    first_financial_year: "First financial year"
     first_met_on: "First met on"
     first_name: "First name"
     first_number: "First number"
@@ -710,7 +712,7 @@ eng:
     phone: "Phone"
     photo: "Photo"
     physical: "Physical"
-    # planned_depreciations: "Planned depreciations"
+    planned_depreciations: "Planned depreciations"
     planned_on: "Planned on"
     position: "Position"
     postcode: "Postcode"
@@ -739,7 +741,7 @@ eng:
     propagate_contacts: "Propagate contacts"
     proposer: "Proposer"
     prospect: "Prospect"
-    # protected: "Protected"
+    protected: "Protected"
     published: "Published"
     purchase: "Purchase"
     purchase_amount: "Purchase amount"
@@ -770,7 +772,7 @@ eng:
     reductible: "Reductible"
     reduction: "Reduction"
     reduction_origin: "Reduction origin"
-    reduction_percent: "Reduction percent"
+    reduction_percent: "Reduction percentage"
     reduction_rate: "Reduction rate"
     reduction_submissive: "Reduction submissive"
     reductions: "Reductions"
@@ -932,6 +934,7 @@ eng:
       depreciation_methods:
         graduated: "Graduated"
         linear: "Linear"
+        simplified_linear: "Simplified linear"
     cash:
       modes:
         bban: "Basic Bank Account Number"
@@ -1360,7 +1363,7 @@ eng:
     tax:
       natures:
         amount: "Amount"
-        percent: "Percent"
+        percent: "Percentage"
     tax_declaration:
       deferment: "Deferment"
       monthly: "Monthly"
