--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -27,6 +27,7 @@ spa:
       # edit: "Edit asset: %{name}"
       # index: "Assets"
       # new: "New asset"
+      # sell: "Sell asset"
       # show: "Asset: %{name}"
     authentication:  #?
       login: "Conexión" #?
